// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidationReport.svelte > should render validation report 1`] = `
<div>
  <rk-status-report
    class=""
  >
    <rk-message
      class="pass"
    >
      <rk-icon
        aria-label="badge-pass"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-pass"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </rk-message>
    <rk-message
      class="fail"
    >
      <rk-icon
        aria-label="badge-fail"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-fail"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </rk-message>
    <rk-message
      class="unknown"
    >
      <rk-icon
        aria-label="badge-unknown"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-unknown"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </rk-message>
    <rk-message
      class="warn"
    >
      <rk-icon
        aria-label="badge-warn"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-warn"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </rk-message>
    
  </rk-status-report>
  
</div>
`;

exports[`ValidationReport.svelte > should render validation report with custom icons 1`] = `
<div>
  <rk-status-report
    class=""
  >
    <rk-message
      class="pass"
    >
      <rk-icon
        aria-label="pass"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="pass"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </rk-message>
    <rk-message
      class="fail"
    >
      <rk-icon
        aria-label="fail"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fail"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </rk-message>
    <rk-message
      class="unknown"
    >
      <rk-icon
        aria-label="unknown"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="unknown"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </rk-message>
    <rk-message
      class="warn"
    >
      <rk-icon
        aria-label="warn"
        class=""
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="warn"
        />
      </rk-icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </rk-message>
    
  </rk-status-report>
  
</div>
`;
